Skill names are no longer skinny - improving readability.

--- a/app/assets/less/main.less
+++ b/app/assets/less/main.less
@@ -557,7 +557,6 @@ main {
 
             margin-bottom: 5px;
             .name {
-              font-weight: 300;
               font-size: 12px;
             }
 
